# fimapi

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  test.rs
src/auth/: mod.rs  scopes.rs
src/response/: error.rs  mod.rs
