[package]
name = "fimapi"
version = "0.1.0"
authors = ["Nick Samson <me@nicksamson.com>"]
edition = "2018"
license = "GPL-3.0-or-later OR AGPL-3.0-or-later"
keywords = ["fimfiction", "fimfic"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.0"
semver = "0.9.0"

[dependencies.reqwest]
version = "0.10.4"
features = ["json"]